<resources>
    <string name="BASE_URL">http://demo.iqdigit.com/</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="welcome_to">Welcome To</string>
    <string name="login">Login</string>
    <string name="powered_by_iqwing_pvt_ltd">Powered by IQwing EduInfotech Pvt. Ltd.</string>
    <string name="company_name">IQwing EduInfotech Pvt. Ltd</string>
    <string name="welcome">Welcome to</string>
    <string name="login_tagline">Verify your account with your phone number. You don\'t need to manually enter verification code if the number install in this phone.</string>
    <string name="your_phone_number">Phone Number</string>
    <string name="student_name">Student Name</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="homework">Homework</string>
    <string name="notice_board">Notice Board</string>
    <string name="logout">Logout</string>
    <string name="class_10_a">Class 10 A</string>
    <string name="switch_child">Switch child</string>
    <string name="adm_no">Adm. No.: 1548</string>
    <string name="student_profile">Student Profile</string>
    <string name="admission_date">Admission Date</string>
    <string name="_01_01_2001">01.01.2001</string>
    <string name="Addmission_date">01_01_2001</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="caste">Caste</string>
    <string name="religion">Religion</string>
    <string name="address">Address</string>
    <string name="father_s_name">Father\'s Name</string>
    <string name="mother_s_name">Mother\'s Name</string>
    <string name="gender">Gender</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="roll_no">Roll NO.</string>
    <string name="admission_type">Admission Type</string>
    <string name="result_status">Result Status </string>
    <string name="pickup_point">Pickup Point </string>
    <string name="status">STATUS</string>
    <string name="active">Active</string>
    <string name="_919856985698">+919856985698</string>
    <string name="category">Category</string>
    <string name="today_s_notice">Today\'s Notice</string>
    <string name="attendence">Attendance</string>
    <string name="month">MONTH</string>
    <string name="jan">JAN</string>
    <string name="feb">FEB</string>
    <string name="mar">MAR</string>
    <string name="apr">APR</string>
    <string name="may">MAY</string>
    <string name="jun">JUN</string>
    <string name="jul">JUL</string>
    <string name="aug">AUG</string>
    <string name="sep">SEP</string>
    <string name="oct">OCT</string>
    <string name="nov">NOV</string>
    <string name="dec">DEC</string>
    <string name="done">DONE</string>
    <string name="this_month">This Month</string>
    <string name="toady">Today</string>
    <string name="first_date">First Date</string>
    <string name="last_date">Last Date</string>
    <string name="check">Check</string>
    <string name="assignment">Assignment</string>
    <string name="choose_date">Choose Date</string>
    <string name="subject">Subject</string>
    <string name="subjects">SUBJECT :-</string>
    <string name="pay_upto_january">Pay upto January</string>
    <string name="fee_payment">Pay Fee Now</string>
    <string name="pay_here">Pay Here</string>
    <string name="pay_now">Pay Now</string>
    <string name="my_profile">My Profile</string>
    <string name="department_name">Department Name</string>
    <string name="salery">50000/-</string>
    <string name="salarys">Salary</string>
    <string name="joinning_date">Joinning Date</string>
    <string name="post_name_pgt">Post Name: PGT</string>
    <string name="teacher_s_name">Teacher\'s Name</string>
    <string name="select_date">Select Date</string>
    <string name="select_subject">Select Subject*</string>
    <string name="select_class">Select Class*</string>
    <string name="title">Title And Description*</string>
    <string name="type_title_here">Type title here</string>
    <string name="description">INTRODUCTION*</string>
    <string name="type_description_here">Type description here</string>
    <string name="upload_image">Upload Image</string>
    <string name="view_receipt">View Receipt</string>
    <string name="view">View</string>
    <string name="examination">Examination</string>
    <string name="view_result">View Result</string>
    <string name="fee_receipt">Paid Fee Receipt</string>
    <string name="view_all_receipt">View All Receipt</string>
    <string name="staff_login">Staff Login</string>
    <string name="student_login">Student Login</string>
    <string name="activities">Activities</string>
    <string name="fee_payment2">Fee Payment</string>
    <string name="fee_receipt2">Fee Receipt</string>
    <string name="activity_detail">Activity Detail</string>
    <string name="add_activity">Add Activity</string>
    <string name="add_alerts">Add Alerts</string>
    <string name="choose_classes">Choose Classes</string>
    <string name="cancel">cancel</string>
    <string name="select_classes">Select Classes</string>
    <string name="all_classes">All Classes</string>
    <string name="holidays">Holidays</string>
    <string name="circulars">Circulars</string>
    <string name="www">WWW</string>
    <string name="select_student">Select Student</string>
    <string name="notice">Notice</string>
    <string name="type_notice_here">Type Notice Here</string>
    <string name="no_homework_available">NO HOMEWORK AVAILABLE</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="no_attendance_available">NO ATTENDANCE AVAILABLE</string>
    <string name="alerts">Alerts</string>
    <string name="no_alerts_available">NO ALERTS AVAILABLE</string>
    <string name="no_activities_available">NO ACTIVITIES AVAILABLE</string>
    <string name="time_table">Calender</string>
    <string name="setting">Setting</string>
    <string name="notification">Notification</string>
    <string name="adm_n">Adm No.</string>
    <string name="present">Present</string>
    <string name="late_present">Late Present</string>
    <string name="late">Late</string>
    <string name="half_day">Half Day</string>
    <string name="absent">Absent</string>
    <string name="leave">Leave</string>
    <string name="selct_month_to_pat_fee">Select Month to Pay Fee</string>
    <string name="devpaul_chowk_hamirpur_himachal_pradesh_177001">Devpaul Chowk, Hamirpur, Himachal Pradesh 177001</string>
    <string name="all_students">All Students</string>
    <string name="exit">Exit</string>
    <string name="iqdigit">IQdigit App</string>
    <string name="otp_was_successfully_sent_to_your_phone_even_you_didn_t_get_otp_you_can_contact_us_our_helpline_to_get_otp_for_login_into_application">OTP was successfully sent to your phone. Even You didn\'t get OTP. You can contact us our helpline to get OTP for login into Application</string>
    <string name="call_now">Call Now</string>
    <string name="i_didn_t_get_a_code">I didn\'t get a code</string>
    <string name="tap_continue_to_accept_our_terms_data_policy_cookie_use_and_the_privacy_policy_and_terms_of_service">Tap Continue to accept our Terms,Data Policy, cookie use and the Privacy Policy and Terms of Service...</string>
    <string name="enter_the_code_which_has_been_sent">Enter the code which has been sent</string>
    <string name="calender">Calender</string>
    <string name="selectDay">SELECT DAY</string>
    <string name="timetable">TimeTable</string>
    <string name="prno">Pr.no.</string>
    <string name="time">Time</string>
    <string name="no_circulars_available">No Circulars Available</string>
    <string name="no_Timetable_available">No Time Table Available</string>
    <string name="download">Download</string>
    <string name="calender_view">Calender View</string>
    <string name="detail_view">Detail View</string>
    <string name="circular">CIRCULAR</string>
    <string name="update_download_finished">Update Download Finished</string>
    <string name="maintenance">Maintenance Break!</string>
    <string name="select_exam">Select Exam</string>
    <string name="internetproblem">Check Your Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="someproblem">Something Went Wrong</string>
    <string name="helloguest">Hi, Guest</string>
    <string name="enquiry">ENQUIRY</string>
    <string name="online_registration">ONLINE REGISTRATION</string>
    <string name="job_apply">JOB APPLY</string>
    <string name="feestructure">FEE STRUCTURE</string>
    <string name="achivement">ACHIEVEMENT</string>
    <string name="website">WEBSITE</string>
    <string name="submit">submit</string>
    <string name="registration_form">REGISTRATION FORM</string>
    <string name="type_studen_name">Type student name here</string>
    <string name="type_father_name">Type father\'s name here</string>
    <string name="session">Session</string>
    <string name="type_mother_namee">Type mothers name here</string>
    <string name="state">State</string>
    <string name="type_state">Type State here</string>
    <string name="type_mobile_number">Type mobile number here</string>
    <string name="type_date_of_birth">Type Date of Birth here</string>
    <string name="admission_sought">Class to which Admission Sought</string>
    <string name="Fee_structure_not_available">Fee Structure Not Available Yet!</string>
    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="type_email">Type Email Address here</string>
    <string name="type_enquiry_description_here">Type Enquiry Description Here</string>
    <string name="achievements">ACHIEVEMENTS</string>
    <string name="no_achievements_available">No Achievements Available</string>
    <string name="type_your_name">Type Your Name</string>
    <string name="postAppliedfor">Post</string>
    <string name="type_post_applied">Type Post you are applying for</string>
    <string name="upload_resume">Upload Resume</string>
    <string name="city">City</string>
    <string name="enquirydescription">Enquiry Description</string>
    <string name="type_student_class">Type student Class</string>
    <string name="type_Class_to_which_Admission_Sought">Type Class to which Admission Sought</string>
    <string name="no_feestructure_available">No Fee Structure Available</string>
    <string name="call_phone">call_phone</string>
    <string name="apply_leave">Apply For Leave</string>
    <string name="date">Select Leave Dates</string>
    <string name="reason">Reason</string>
    <string name="apply_for_leave">Apply for Leave</string>
    <string name="wallet">Pocket Money</string>
    <string name="share">Share</string>
    <string name="iqwing">IQWing Pvt. Ltd</string>
    <string name="assessment">Assessment</string>
    <string name="time_over">Time Over</string>
    <string name="ans_key_setup">Ans. Key Setup</string>
    <string name="Can_not_submit_ans_yet">Can Not Submit Answers Yet</string>
    <string name="publish">publish</string>
    <string name="youtube_link">YouTube Link</string>
    <string name="type_youtube_link_here">Type YouTube Link Here</string>
    <string name="Add_Video">Add Video</string>
    <string name="Add_Image">Add Image</string>
    <string name="Video_Title">Video Title</string>
    <string name="type_video_title_here">Type Video Title Here</string>
    <string name="video_description">Video Description</string>
    <string name="type_video_description_here">Type Video Description Here</string>
    <string name="image_title">Image Title</string>
    <string name="type_image_title_here">Type Image Title Here</string>
    <string name="Image_description">Image Description</string>
    <string name="type_image_description_here">Type Image Description Here</string>
</resources>