<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_switch"
        android:icon="@drawable/ic_swich_horiz_black_24dp"
        android:title="@string/switch_child"/>
    <item android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile_pin_black_24dp"
        android:title="@string/profile"/>
    <item android:id="@+id/nav_attend"
        android:icon="@drawable/ic_attend_contact_calendar_black_24dp"
        android:title="@string/attendence"/>
    <item android:id="@+id/nav_homework"
        android:icon="@drawable/homework"
        android:title="@string/homework"/>
    <item android:id="@+id/nav_examination"
        android:icon="@drawable/examination"
        android:title="@string/examination"/>
    <item android:id="@+id/nav_feepayment"
        android:icon="@drawable/feeicon"
        android:title="@string/fee_payment2"/>
    <item android:id="@+id/nav_feereceipt"
        android:icon="@drawable/receipt"
        android:title="@string/fee_receipt2"/>
<!--    <item android:id="@+id/nav_exit"-->
<!--        android:icon="@drawable/ic_logout_black_24dp"-->
<!--        android:title="@string/exit"/>-->
    <item android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout_black_24dp"
        android:title="@string/logout"/>
<!--    <group android:id="@+id/grp1">-->

<!--    </group>-->
<!--    <group android:id="@+id/grp2">-->

<!--    </group>-->
<!--    <group android:id="@+id/grp3">-->

<!--    </group>-->
<!--    <group android:id="@+id/grp4">-->

<!--    </group>-->
<!--    <group android:id="@+id/grp5">-->

<!--    </group>-->
<!--    <group android:id="@+id/grp9">-->

<!--    </group>-->
<!--    <group android:id="@+id/grp6">-->

<!--    </group>-->
<!--    <group android:id="@+id/grp7">-->

<!--    </group>-->
<!--    <group android:id="@+id/grp8">-->

<!--    </group>-->



    <item android:id="@+id/nav_home"
        android:visible="false"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"/>


    <!--<item android:id="@+id/nav_noticeboard"-->
          <!--android:icon="@drawable/ic_noticeboard_black_24dp"-->
          <!--android:title="@string/notice_board"/>-->


</menu>