<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.school.iqdigit.Activity.AddTutorialActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backbtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_arrow_back1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingEnd="40dp"
            android:text="@string/Add_Video"
            android:textColor="@color/White"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/alegreya_sans"
        android:text="@string/Video_Title"
        android:layout_marginTop="@dimen/tendp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:typeface="serif" />

    <EditText
        android:id="@+id/ed_book_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/background_7"
        android:hint="@string/type_video_title_here"
        android:padding="5dp"
        android:textColor="@color/Grey_dark"
        android:textSize="18sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/alegreya_sans"
        android:maxLines="2"
        android:text="@string/video_description"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:typeface="serif" />

    <EditText
        android:id="@+id/ed_lesson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/background_7"
        android:gravity="start"
        android:hint="@string/type_video_description_here"
        android:maxLines="12"
        android:minLines="5"
        android:padding="5dp"
        android:textColor="@color/Grey_dark"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/alegreya_sans"
        android:text="@string/youtube_link"
        android:layout_marginTop="@dimen/tendp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:typeface="serif" />

    <EditText
        android:id="@+id/ed_youtube_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/background_7"
        android:hint="@string/type_youtube_link_here"
        android:padding="5dp"
        android:textColor="@color/Grey_dark"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btnSubTutorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/ic_btn_view_one"
        android:textColor="@color/white"
        android:text="@string/submit"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
