<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:com.github.pratikbutani="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.AssignmentStaff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backbtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_arrow_back1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingEnd="40dp"
            android:text="@string/job_apply"
            android:textColor="@color/White"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imagev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/twentyfivedp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/alegreya_sans"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:typeface="serif" />

            <EditText
                android:id="@+id/edNameCandidate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/background_7"
                android:fontFamily="@font/alegreya_sans"
                android:hint="@string/type_your_name"
                android:padding="7dp"
                android:maxLines="1"
                android:maxLength="11"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:textColor="@color/Grey_dark"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/alegreya_sans"
                android:text="@string/postAppliedfor"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:typeface="serif" />

            <EditText
                android:id="@+id/edPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/background_7"
                android:fontFamily="@font/alegreya_sans"
                android:hint="@string/type_post_applied"
                android:padding="7dp"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:maxLength="50"
                android:maxLines="1"
                android:textColor="@color/Grey_dark"
                android:textSize="18sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/alegreya_sans"
                android:text="@string/mobile_number"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:typeface="serif" />

            <EditText
                android:id="@+id/edMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/background_7"
                android:fontFamily="@font/alegreya_sans"
                android:hint="@string/type_mobile_number"
                android:padding="7dp"
                android:inputType="phone"
                android:textColor="@color/Grey_dark"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/alegreya_sans"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:typeface="serif" />

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/background_7"
                android:fontFamily="@font/alegreya_sans"
                android:hint="@string/type_email"
                android:padding="7dp"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:imeOptions="actionDone"
                android:textColor="@color/Grey_dark"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/upload_resume"
                android:background="@drawable/background_8"
                android:backgroundTint="@color/blue_50"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/upload_resume"
                android:textSize="18sp"
                android:typeface="serif"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/btnSubmit1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="@dimen/tendp"
                android:layout_marginRight="@dimen/tendp"
                android:layout_marginBottom="@dimen/tendp"
                android:background="@drawable/ic_btn_view_one"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/White"
                android:textStyle="bold"
                android:textSize="18sp"
                android:padding="5dp"
                android:typeface="serif" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>