<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark">
        <ImageView
            android:id="@+id/backbtn"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_alignParentStart="true"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_back1"/>
        <TextView
            android:id="@+id/tvTitle"
            android:gravity="center"
            android:paddingEnd="40dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            android:textColor="@color/White"
            android:textStyle="bold"
            android:text="@string/assessment"
            tools:ignore="RtlSymmetry" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDone"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textColor="@color/grey_80"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="@dimen/sixteensp"
            android:textStyle="bold"
            android:theme="@style/Button.White"
            android:padding="@dimen/twodp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/tendp"
            android:background="@drawable/ic_corner_view_three"
            android:text="@string/publish"/>

    </RelativeLayout>
    <TextView
        android:id="@+id/tv_timer"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="5dp"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="@dimen/tendp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/time_over"
        android:background="@drawable/ic_btn_view_one"
        android:textColor="@color/white"
        android:fontFamily="@font/quicksand_bold"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sixteensp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/quicksand_bold"
        android:textColor="@color/grey_80"
        android:text="@string/ans_key_setup"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMcqAns"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:background="@drawable/ic_corner_view_one"
        android:layout_height="140dp"
        android:scrollbarSize="7dp"
        android:scrollIndicators="start"
        android:scrollbarStyle="outsideOverlay"
        android:fadeScrollbars="false"
        android:scrollbarThumbVertical="@color/blue_700"
        android:scrollbars="vertical"
        android:layout_marginBottom="@dimen/fivedp"/>
    <TextView
        android:id="@+id/tvNoAns"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:background="@drawable/ic_corner_view_one"
        android:layout_height="140dp"
        android:text="@string/Can_not_submit_ans_yet"
        android:textColor="@color/grey_80"
        android:gravity="center"
        android:textSize="@dimen/sixteensp"
        android:fontFamily="@font/quicksand_bold"
        android:layout_marginBottom="@dimen/fivedp"/>

            <es.voghdev.pdfviewpager.library.PDFViewPager
                android:id="@+id/pdfViewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

</LinearLayout>
